--- a/css/style.css
+++ b/css/style.css
@@ -662,14 +662,21 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
+    background-color: var(--black-article);
+    border-radius: 20px;
+    padding: 1%;
+    z-index: 0;
 }
 
-.form-comment label, .form-comment input{
+.form-comment label, .form-comment input, .form-comment textarea{
     margin: 1%;
+    border-radius: 10px;
 }
 
 .new-comment{
     width: 70%;
+    height: 50px;
 }
 
 .comments{
@@ -699,7 +706,7 @@ body{
 }
 
 .user-info p{
-    width: 30%;
+    width: 33%;
     text-align: center;
 }
 
