--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ body{
 /* trapecio invertido */
 .close-page{
     position: relative;
-    top: -5vh;
+    top: -8vh;
     display: none;
     clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 20% 100%);
     width: 10%;
@@ -371,9 +371,6 @@ body{
     justify-content: center;
     align-content: center;
 }
-
-
-
 
 /* animaciones del header, agrega clase ".animated-header" desde js y cambia estilos */ 
 .header.animated-header{
@@ -432,6 +429,7 @@ body{
     height: 5vh;
     display: none;
     margin: 0;
+    padding-top: 3vh;
     transition: all 5s ease;
 }
 
